--- a/Experiment 1/SHAAN_AGARWAL_2021300001.ipynb
+++ b/Experiment 1/SHAAN_AGARWAL_2021300001.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "# Importing The Necessary Python Libraries\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import numpy as np # type: ignore\n",
+    "import pandas as pd # type: ignore\n",
+    "import matplotlib.pyplot as plt # type: ignore\n",
+    "import seaborn as sns # type: ignore"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "source": [
     "# Scatter Plot\n",
     "\n",
-    "from scipy.stats import linregress\n",
+    "from scipy.stats import linregress # type: ignore\n",
     "\n",
     "# Scatter plot with regression line\n",
     "plt.figure(figsize=(12, 8))\n",
